2003-10-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am: added experience menu
	* boards/boardicons/experience.png: create by bruno
	* boards/canal_lock.xml.in: moved to experiece menu
	* boards/dataset/mrpatate.xml: added train items
	* boards/draw/tool-flip.png: created flip option
	* boards/draw/tool-flip_on.png: created flip option
	* boards/draw/tool-move-off.png: created move option
	* boards/draw/tool-move.png: created move option
	* boards/draw/tool-point.png: deleted 
	* boards/draw/tool-point_on.png: deleted
	* boards/draw/tool-selector.jpg: longer now
	* boards/paratrooper.xml.in: moved to experiece menu
	* boards/railroad/railroad-bg.jpg: recreated at higher quality
	* boards/railroad/railroad-bg.png: removed, not used
	* boards/submarine.xml.in: moved to experiece menu
	* boards/watercycle.xml.in: moved to experiece menu
	* po/POTFILES.in: added experience.xml.in
	* src/boards/draw.c: (key_press), (display_drawing_area),
	(display_tool_selector), (get_tool_cursor), (set_item_color),
	(create_item), (item_event_resize), (image_selected),
	(item_event_move), (item_event): added flip and rotate option. fixed text to support utf8
	* src/boards/railroad.c: (start_board): uses jpg backgroud now
	* src/boards/wordsgame.c: (key_press): removed printf
	* src/gcompris/gameutil.c: (item_rotate), (item_rotate_relative),
	(item_rotate_with_center), (item_rotate_relative_with_center):
	* src/gcompris/gameutil.h: added rotate relative option

2003-10-29  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/Makefile.am: removed all library link to boards: Not needed.
	* src/boards/draw.c: (display_color_selector), (ext_color_event),
	(set_item_color), (create_item): changed to provide 4 times colors choices
	* src/gcompris/gcompris.c: (gcompris_init): added support for -A to select the sound output
	* src/gcompris/oggplayer.c: (decode_ogg_file): added support for -A to select the sound output
	* src/gcompris/properties.c: (gcompris_properties_new),